# jello

./: .gitignore  CLAUDE.md  JELLO.md  README.md  RESULTS.md  dune-project  jello.opam
lib/: config.ml  config.mli  diagnose.ml  discover.ml  discover.mli  driver.ml  driver.mli  dune  emit.ml  emit.mli  execute.mli  normalize.ml  parse.ml  plan.ml  plan.mli  reorder.ml  reorder.mli  resolve.ml  symbols.ml  triple.ml  triple.mli  types.ml  types.mli
lib/backend/: diagnose.ml  diagnose.mli  emit.ml  execute.ml  execute.mli  plan.ml
lib/env/: discover.ml  discover.mli  symbols.ml  symbols.mli  triple.ml
lib/frontend/: normalize.ml  normalize.mli  parse.ml  parse.mli
test/: dune  test.ml
